--- a/package.json
+++ b/package.json
@@ -2,24 +2,15 @@
   "name": "my-new-app",
   "private": true,
   "version": "0.0.0",
-<<<<<<< HEAD
   "type": "module",
+  "homepage": "https://acs-curriculum.github.io/react_repo2/",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
-=======
-  "type": "module", "homepage": "https://acs-curriculum.github.io/react_repo2/",
-
-  "scripts":{
-    "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint .",
     "preview": "vite preview",
-      "predeploy": "npm run build",
-  "deploy": "gh-pages -d dist"
->>>>>>> 3e55b07 (third)
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "node": "^20.19.0",
@@ -38,6 +29,7 @@
     "eslint": "^9.21.0",
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
+    "gh-pages": "^6.3.0",
     "globals": "^15.15.0",
     "vite": "^6.2.3"
   }
